location.reload() create/delete, products en mail

--- a/src/views/admin.pug
+++ b/src/views/admin.pug
@@ -63,6 +63,7 @@ html
                             th Nombre Producto
                             th Precio Producto
                             th Imagen Producto
+                            th Acciones
                         each producto in productos
                             tr
                                 td=producto.name
